--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-    <title>Bean | Index</title>
+    <title>Bean | Home</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="assets/custom.css">
