deep network header

--- a/input.html
+++ b/input.html
@@ -41,7 +41,7 @@
 
 <header>
 
-    <div class="header-container">
+    <!--<div class="header-container">
         <div>
             <a href="index.html">
                 <h2 class="header-text">Bean</h2>
@@ -62,7 +62,7 @@
             <i class="profil-icon fa-solid fa-user"></i>
             <p class="profil-text">Noé</p>
         </div>
-    </div>
+    </div>-->
 
 </header>
 
