deep network header

--- a/input.html
+++ b/input.html
@@ -62,7 +62,7 @@
             <i class="profil-icon fa-solid fa-user"></i>
             <p class="profil-text">Noé</p>
         </div>
-    </div>-->
+    </div>--->
 
 </header>
 
